first changed commit

--- a/index.html
+++ b/index.html
@@ -1,40 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coding Practice</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-   <header>
-     <nav>
-        <ul>
-            <a href="index.html"><li>Home</li></a>
-            <a href="about.html"><li>About</li></a>
-            <a href="contact.html"><li>Contact</li></a>
-            <a href="contact2.html"><li>Contact2</li></a>
-        </ul>
-     </nav>
+    <header>
+        <nav>
+            <ul>
+                <a href="index.html">
+                    <li>Home</li>
+                </a>
+                <a href="about.html">
+                    <li>About</li>
+                </a>
+                <a href="contact.html">
+                    <li>Contact</li>
+                </a>
+            </ul>
+        </nav>
     </header>
- <h1>My Web Page</h1>
- <h2>This is an h2</h2>
- <h3>here's an h3</h3>
- <h4>Hello</h4>
- <h5 class="title">Hello world</h5>
- <h5>How are you</h5>
- <h6>this is it</h6>
+    <h1>My Web Page</h1>
+    <h2>This is an h2</h2>
+    <h3>Here's an h3</h3>
+    <h4>Hello</h4>
+    <h5 class="title">Hello World</h5>
+    <h6>This is it</h6>
     <div class="container">
-       <h2>what are divs</h2>
-        <h5>divs are used as containers for other
-            html element and help us divide our 
-            page into sections
+        <h2>What are divs</h2>
+       
+        <h5>Divs are used as
+            containers for other
+            html elemenmts and help
+            us divide our page into
+            sections
         </h5>
     </div>
-    <div class="flex">
-        <p>Let's learn about flexbox. Flexbox needs a parent 
-            container in order to work. The elements inside of that container can 
-            be adjusted and centered and moved around easily
+
+    <div class="flex"><p>
+        Let's learn about flexbox. Flexbox needs
+        a parent container in order to work. The elemenmts
+        inside of that container can be ajusted and centered
+        and moved around easily
         </p>
         <div class="box" id="box1">box 1</div>
         <div class="box" id="box2">box 2</div>
@@ -45,16 +57,17 @@
     </div>
 
     <section>
-        <p>this is paragraph with normal sized text</p><br>
-        <i id="italic">this is italic</i><br>
-        <em>this is emphazied text</em><br>
-        <strong>this element uses a bolder or stronger text</strong><br>
-        <b>this is blod text</b>
+        <p>This is a paragraph with normal sized text</p>
+        <i id="italic">This is italic</i><br>
+        <em>This is emphasized text</em><br>
+        <strong>This element uses a strong text</strong><br>
+        <b>This is bold text</b>
     </section>
-    <a href="https://Amazon.com">Go shopping</a>
-   <img src="bird.jpg" alt="bird">
-   <img src="OET.jpg" alt="OET">
-
-   <a href="https://petfinder.com"> <img src="Koala.jpg" alt="Koala" class="circle-img"></a>
+    <a href="https://amazon.com">Go Shopping</a>
+    <a href="about.html">About</a>
+    <img src="https://www.thesprucepets.com/thmb/Ytj9o1MFYQ7XG6HExlFg07vD6TY=/360x240/filters:max_bytes(150000):strip_icc():format(webp)/kitten-looking-at-camera-521981437-57d840213df78c583374be3b.jpg"
+        alt="kitten-looking-at-camera-521981437-57d840213df78c583374be3b">
+    <a href="https://petfinder.com"><img src="kitten1.jpg" alt="kitten" class="circle-img"></a>
 </body>
+
 </html>
