--- a/about.html
+++ b/about.html
@@ -14,19 +14,19 @@
                 <a href="index.html"><li>Home</li></a>
                 <a href="about.html"><li>About</li></a>
                 <a href="contact.html"><li>Contact</li></a>
+                <a href="contact2.html"><li>Contact2</li></a>
             </ul>
         </nav>
     </header>
     <h1>About</h1>
     <p>Welcome to my about page</p>
     <div class="wrapper">
-        <div class="Box a"> <img src="k2.jpg" alt="k" height="300px">
-        </div>
-        <div class="Box b"> <img src="k3.jpg" alt="k" height="300px"></div>
+        <div class="Box a"> <img src="k2.jpg" alt="k2" height="300px"></div>
+        <div class="Box b"> <img src="k3.jpg" alt="k3" height="300px"></div>
         <div class="Box c"></div>
         <div class="Box d"> <img src="p.jpg" alt="p" height="300px"></div>
-        <div class="Box e"> <img src="p2.jpg" alt="p" height="300px"></div>
-        <div class="Box f"> <img src="k1.jpg" alt="k" height="300px"></div>
+        <div class="Box e"> <img src="p2.jpg" alt="p2" height="300px"></div>
+        <div class="Box f"> <img src="k1.jpg" alt="k1" height="300px"></div>
     </div>
 </body>
 </html>
