--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
                 <a href="contact.html">
                     <li>Contact</li>
                 </a>
+                <a href="contact2.html">
+                    <li>Contact2</li>
+                </a>
             </ul>
         </nav>
     </header>
