--- a/contact2.html
+++ b/contact2.html
@@ -23,7 +23,8 @@
 
     <div class="contact-box">
       <div class="row">
-        <form class="col3 s3">
+        <form name="contact2" method="POST" data-netlify="true"class="col3 s3">
+          <input type="hidden" name="form-name" value="contact" />
           <div class="row">
             <div class="input-field col3 s3">
               <i class="material-icons prefix">account_circle</i>
